--- a/WorkoutDiary.csproj
+++ b/WorkoutDiary.csproj
@@ -68,6 +68,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\TrainingPlanHostPage.xaml.cs">
+	    <DependentUpon>TrainingPlanHostPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\TrainingPlanPage.xaml.cs">
 	    <DependentUpon>TrainingPlanPage.xaml</DependentUpon>
 	  </Compile>
@@ -102,6 +105,9 @@
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\StatisticCardioPage.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\TrainingPlanHostPage.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\StatisticPage.xaml">
